KB-13097 : create Health API